crates/parser/src/snapshots/parser__latex__tests__parse@caption__caption_default_error.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/caption/caption_default_error.txt
---
ROOT@0..26
  PREAMBLE@0..26
    CAPTION@0..26
      COMMAND_NAME@0..8 "\\caption"
      BRACK_GROUP@8..13
        L_BRACK@8..9 "["
        TEXT@9..12
          WORD@9..12 "qux"
        R_BRACK@12..13 "]"
      CURLY_GROUP@13..26
        L_CURLY@13..14 "{"
        TEXT@14..18
          WORD@14..17 "Foo"
          WHITESPACE@17..18 " "
        GENERIC_COMMAND@18..23
          COMMAND_NAME@18..22 "\\Bar"
          WHITESPACE@22..23 " "
        TEXT@23..26
          WORD@23..26 "Baz"

