crates/parser/src/snapshots/parser__latex__tests__parse@caption__caption_figure.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/caption/caption_figure.txt
---
ROOT@0..39
  PREAMBLE@0..39
    ENVIRONMENT@0..39
      BEGIN@0..14
        COMMAND_NAME@0..6 "\\begin"
        CURLY_GROUP_WORD@6..14
          L_CURLY@6..7 "{"
          KEY@7..13
            WORD@7..13 "figure"
          R_CURLY@13..14 "}"
      CAPTION@14..27
        COMMAND_NAME@14..22 "\\caption"
        CURLY_GROUP@22..27
          L_CURLY@22..23 "{"
          TEXT@23..26
            WORD@23..26 "Foo"
          R_CURLY@26..27 "}"
      END@27..39
        COMMAND_NAME@27..31 "\\end"
        CURLY_GROUP_WORD@31..39
          L_CURLY@31..32 "{"
          KEY@32..38
            WORD@32..38 "figure"
          R_CURLY@38..39 "}"

