crates/parser/src/snapshots/parser__latex__tests__parse@caption__caption_minimal.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/caption/caption_minimal.txt
---
ROOT@0..22
  PREAMBLE@0..22
    CAPTION@0..22
      COMMAND_NAME@0..8 "\\caption"
      CURLY_GROUP@8..22
        L_CURLY@8..9 "{"
        TEXT@9..13
          WORD@9..12 "Foo"
          WHITESPACE@12..13 " "
        GENERIC_COMMAND@13..18
          COMMAND_NAME@13..17 "\\Bar"
          WHITESPACE@17..18 " "
        TEXT@18..21
          WORD@18..21 "Baz"
        R_CURLY@21..22 "}"

